// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Pipfile.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() returns null if unchanged 1`] = `
Array [
  "pipenv lock",
]
`;

exports[`.updateArtifacts() returns null if unchanged 2`] = `
Array [
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "env": Object {
      "HOME": null,
      "LANG": "en_US.UTF-8",
      "PATH": null,
      "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Pipfile.lock 1`] = `
Array [
  "pipenv lock",
]
`;

exports[`.updateArtifacts() returns updated Pipfile.lock 2`] = `
Array [
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "env": Object {
      "HOME": null,
      "LANG": "en_US.UTF-8",
      "PATH": null,
      "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode 1`] = `
Array [
  "docker run --rm --user=foobar -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache/others/pipenv\\":\\"/tmp/renovate/cache/others/pipenv\\" -e LC_ALL -e LANG -e PIPENV_CACHE_DIR -w \\"/tmp/github/some/repo\\" renovate/pipenv pipenv lock",
]
`;

exports[`.updateArtifacts() supports docker mode 2`] = `
Array [
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "env": Object {
      "HOME": null,
      "LANG": "en_US.UTF-8",
      "PATH": null,
      "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
    },
  },
]
`;
